<resources>
    <string name="app_name">Contacts</string>
    <string name="title_dialog_user">Hello ad new contact</string>
    <string name="label_btn_cancel_add_user">Cancel</string>
    <string name="label_btn_add_user">Save</string>
    <string name="e_mail">E-mail</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="take_photo">Take Photo</string>
    <string name="from_galery">From galery</string>
    <string name="tile_dialog">Warning</string>
    <string name="dialog_message">Do you want to delete this user</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="this_e_mail_is_invalid">E-mail is not invalid</string>
</resources>